Use Paths.get instead of Path.of in DefaultProjectParserIsExcludedTest
The plugin compiles all sources, including tests, with options.release set to 8.
Path.of(String) was introduced in Java 11, so it does not resolve against the
Java 8 API surface and the test failed to compile. Paths.get returns the same
java.nio.file.Path and is available on Java 8.